# Data-Base

./: CMakeLists.txt  README.md
demo/: main.cpp
include/: BasicFaculty.h  BasicFacultyFunctions.h  Faculty.h  FunctionsFileSystem.h  GybridFacultyFunctions.h  IndustryFaculty.h  IndustryFacultyFunctions.h  University.h
sources/: BasicFaculty.cpp  BasicFacultyFunctions.cpp  GybridFacultyFunctions.cpp  IndustryFaculty.cpp  IndustryFacultyFunctions.cpp
